--- a/recommender/woger/Dockerfile
+++ b/recommender/woger/Dockerfile
@@ -2,4 +2,6 @@ FROM python:3.6-alpine
 MAINTAINER Borodin Gregory <grihabor@mail.ru>
 
 RUN pip3 install --no-cache-dir \
-        pytest
+	make \
+        pytest \
+	pytest-cov
