--- a/recommender/server/Dockerfile
+++ b/recommender/server/Dockerfile
@@ -1,9 +1,15 @@
-FROM python:3.6
+FROM python:3.6-alpine
 MAINTAINER Borodin Gregory <grihabor@mail.ru>
 
 RUN pip3 install --no-cache-dir \
-        numpy==1.12 \
-        blessings==1.6 \
-        requests==2.17 \
-        flask==0.12 \
-        python-dateutil
+        requests \
+        flask \
+        python-dateutil \
+        celery \
+        healthcheck
+
+RUN apk update \
+ && apk add --virtual .build-deps \
+        g++ \
+ && pip3 install --no-cache-dir numpy \
+ && apk del .build-deps
