remove cuda images

--- a/recommender/worker/Dockerfile
+++ b/recommender/worker/Dockerfile
@@ -1,4 +1,4 @@
-FROM grihabor/cuda:keras
+FROM grihabor/research:latest
 MAINTAINER Borodin Gregory <grihabor@mail.ru>
 
 RUN pip3 install --no-cache-dir \
